Pfam result sort, atom count bugfix, side-nav z-index

--- a/config/multiqc_custom_css.css
+++ b/config/multiqc_custom_css.css
@@ -1,3 +1,8 @@
+/* MultiQC raport */
+.side-nav-wrapper{
+  z-index: 1000;
+}
+
 /* Sequence viewer */
 div.code-parent {
   display: flex;
